[Deployment] Create first tests for Folia recipe